# axp2101-embedded

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: driver.rs  driver_async.rs  error.rs  lib.rs  registers.rs  types.rs
