[package]
name = "axp2101"
version = "0.2.0"
edition = "2021"
authors = ["Trevor Flahardy <trevor@flahardy.com>"]
license = "MIT"
description = "Embedded Rust driver for the AXP2101 Power Management IC using embedded-hal"
repository = "https://github.com/georgik/axp2101-rs"
documentation = "https://docs.rs/axp2101"
keywords = ["embedded", "no-std", "pmic", "axp2101", "power-management"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
# Add development dependencies for testing if needed
