[package]
name = "axp2101-embedded"
version = "0.3.1"
edition = "2021"
authors = ["Trevor Flahardy"]
license = "MIT"
description = "Embedded Rust driver for the AXP2101 Power Management IC using embedded-hal"
repository = "https://github.com/trevorflahardy/axp2101-embedded"
documentation = "https://docs.rs/axp2101-embedded"
keywords = ["embedded", "no-std", "pmic", "axp2101", "power-management"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[features]
default = []
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[dev-dependencies]
# Add development dependencies for testing if needed
